bin/firewall.rules
# Generated by xtables-save v1.8.2 on Sat May  2 00:52:51 2020
*filter
:INPUT ACCEPT [131138:124344920]
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 8443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 8080 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8080 -j ACCEPT
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [71385:28241042]
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
COMMIT
# Completed on Sat May  2 00:52:51 2020
# Generated by xtables-save v1.8.2 on Sat May  2 00:52:51 2020
*nat
:PREROUTING ACCEPT [3351:945717]
:INPUT ACCEPT [3240:355198]
:POSTROUTING ACCEPT [260:22544]
:OUTPUT ACCEPT [1583:102076]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat May  2 00:52:51 2020
